# Rag-AI-Virtual-Assistant

./: .env.example  .gitignore  README.md  WORKFLOW.md  pyproject.toml  requirements.txt  start_interface.py  web_interface.py  web_interface_azure.py
.github/workflows/: azure-deploy.yml  main_architect-rag.yml
app/: chain.py  document_processor.py  server.py
